Начало разметки личного проекта (доработка)

--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,10 @@
     <header class="page-header">
         <h1 class="visually-hidden">Главная страница Пинк</h1>
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="https://via.placeholder.com/50x30" width="50" height="30">
+          <svg class="page-header__logo-image" width="50" height="30"></svg>
         </a>
         <button class="page-header__toggle" type="button">
-          <img class="page-header__toggle-close" src="https://via.placeholder.com/50x30" width="50" height="30">
+          <svg class="page-header__toggle-opened" width="50" height="30"></svg>
         </button>
         <nav class="main-nav">
           <ul class="main-nav__list site-list">
@@ -40,13 +40,13 @@
         <h2 class="visually-hidden">Скачать приложение</h2>
         <a class="download-link">Скачать приложение</a>
         <ul class="download-list">
-          <li class="download-list--apple">
+          <li class="download-item download-item--apple">
             <a href="https://www.apple.com/ios/app-store/" aria-label="App Store"></a>
           </li>
-          <li class="download-list--android">
+          <li class="download-item download-item--android">
             <a href="https://play.google.com/store?hl=ru" aria-label="Google Play"></a>
           </li>
-          <li class="download-list--windows">
+          <li class="download-item download-item--windows">
             <a href="https://www.microsoft.com/ru-ru/store/apps/windows" aria-label="Microsoft Store"></a>
           </li>
         </ul>
