--- a/source/form.html
+++ b/source/form.html
@@ -8,10 +8,10 @@
     <header class="page-header">
       <h1 class="visually-hidden">Cтраница конкурс</h1>
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/50x30" width="50" height="30">
+        <svg class="page-header__logo-image" width="50" height="30"></svg>
       </a>
       <button class="page-header__toggle" type="button">
-        <img class="page-header__toggle-close" src="https://via.placeholder.com/50x30" width="50" height="30">
+        <svg class="page-header__toggle-close" width="50" height="30"></svg>
       </button>
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
@@ -34,30 +34,32 @@
     <main  class="page-main">
     </main>
     <footer  class="page-footer">
-      <section class="page-footer__logo">
-        <a href="index.html">
-          <img src="https://via.placeholder.com/130x50" width="130" height="50" alt="Логотип Pink">
-        </a>
-      </section>
-      <section class="page-footer__social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__net social-net--tw" aria-label="Твиттер"></a>
-          </li>
-          <li class="social__item">
-            <a class="social__net social-net--fb" aria-label="Фейсбук"></a>
-          </li>
-          <li class="social__item">
-            <a class="social__net social-net--yt" aria-label="Ютуб"></a>
-          </li>
-        </ul>
-      </section>
-      <section class="page-footer__copyright">
-        <span>Разработано</span>
-        <a class="copyright__link" href="https://htmlacademy.ru" aria-label="HTML academy">
-          <img src="https://via.placeholder.com/40x50" width="40" height="50" alt="Логотип HTML academy">
-        </a>
-      </section>
+      <div class="page-footer__wrapper">
+          <div class="page-footer__logo">
+            <a href="index.html">
+              <img src="https://via.placeholder.com/130x50" width="130" height="50" alt="Логотип Pink">
+            </a>
+          </div>
+          <div class="page-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social-link--tw" aria-label="Мы в твиттере"></a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social-link--fb" aria-label="Мы в фейсбуке"></a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social-link--yt" aria-label="Мы в ютубе"></a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__copyright">
+            <span>Разработано</span>
+            <a class="copyright__link" href="https://htmlacademy.ru" aria-label="HTML academy">
+              <img src="https://via.placeholder.com/40x50" width="40" height="50" alt="Логотип HTML academy">
+            </a>
+          </div>
+      </div>
     </footer>
   </body>
  </html>
