Начало разметки личного проекта (д)

--- a/source/form.html
+++ b/source/form.html
@@ -32,6 +32,7 @@
       <h2 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
     </header>
     <main  class="page-main">
+      <h2 class="visually-hidden">главная страница конкурс</h1>
     </main>
     <footer  class="page-footer">
       <div class="page-footer__wrapper">
