--- a/source/photo.html
+++ b/source/photo.html
@@ -33,7 +33,7 @@
     </header>
     <main  class="page-main">
       <section class="gallery">
-        <h2 class="visually-hidden">Галерея фотографий</h2>
+        <h2 class="visually-hidden">Галерея Фотографий</h2>
         <section class="gallery__title">
           <p class="gallery__text">
             Взгляните на фотографии, которые выкладывают пользователи!
