Начало разметки личного проекта (e)

--- a/source/form.html
+++ b/source/form.html
@@ -28,11 +28,12 @@
             <a href="https://htmlacademy.ru">HTML ACADEMY</a>
           </li>
         </ul>
-      <nav>
-      <h2 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      </nav>
+      <h2 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
     </header>
+
     <main  class="page-main">
-      <h2 class="visually-hidden">главная страница конкурс</h1>
+      <h2 class="visually-hidden">главная страница конкурс</h2>
     </main>
     <footer  class="page-footer">
       <div class="page-footer__wrapper">
@@ -44,17 +45,17 @@
           <div class="page-footer__social social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social-link--tw" aria-label="Мы в твиттере"></a>
+                <a class="social__item social__item--tw" aria-label="Мы в твиттере"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social-link--fb" aria-label="Мы в фейсбуке"></a>
+                <a class="social__item social__item--fb" aria-label="Мы в фейсбуке"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social-link--yt" aria-label="Мы в ютубе"></a>
+                <a class="social__item social__item--yt" aria-label="Мы в ютубе"></a>
               </li>
             </ul>
           </div>
-          <div class="page-footer__copyright">
+          <div class="page-footer__copyright copyright">
             <span>Разработано</span>
             <a class="copyright__link" href="https://htmlacademy.ru" aria-label="HTML academy">
               <img src="https://via.placeholder.com/40x50" width="40" height="50" alt="Логотип HTML academy">
