--- a/source/index.html
+++ b/source/index.html
@@ -24,12 +24,13 @@
             <li class="site-list__item">
               <a href="form.html">Конкурс</a>
             </li>
-           <li class="site-list__item">
+            <li class="site-list__item">
               <a href="https://htmlacademy.ru">HTML ACADEMY</a>
             </li>
           </ul>
-        <nav>
+        </nav>
     </header>
+
     <main class="page-main">
       <section class="page-main__foto">
         <h2 class="visually-hidden">Фотография приложения на телефоне</h2>
@@ -53,10 +54,10 @@
       </section>
       <section class="features">
         <h2 class="visually-hidden">Наши возможности</h2>
-        <section class="features__slogan">
+        <div class="features__slogan">
           <p>Устали от серости мегаполиса?</p>
           <p>Нам есть, что вам предложить!</p>
-        </section>
+        </div>
         <ul class="features__list">
           <li class="features__item">
             <h3 class="features__item-title">Поднимает настроение</h3>
