--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,96 @@
           <img src="https://via.placeholder.com/150x300" width="150" height="300" alt="Всем привет">
         </div>
       </section>
+      <section class="reviews">
+        <h2 class="visually-hidden">Отзывы о нас</h2>
+        <div class="reviews__wrapper slider">
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item slider__item">
+              <p class="reviews__author">Николай Петров</p>
+              <p class="reviews__text">
+                "Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"
+              </p>
+            </li>
+            <li class="reviews__item slider__item">
+              <p class="reviews__author"></p>
+              <p class="reviews__text"></p>
+            </li>
+            <li class="reviews__item slider__item">
+              <p class="reviews__author"></p>
+              <p class="reviews__text"></p>
+            </li>
+          </ul>
+          <p class="reviews__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+      <section  class="tariffs">
+        <h2 class="visually-hidden">Тарифы, цены, характеристики</h2>
+        <div class="tariffs__wrapper slider">
+          <ul class="tariffs__list slider__list">
+            <li class="tariffs__item slider__item slider__item--hit">
+              <table>
+                <tr>
+                  <th>Стандарт 3,99 USD</th>
+                </tr>
+                <tr>
+                  <td>
+                    Розовый фильтр
+                    <svg  width="30" height="30"></svg>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Смайлики
+                    <svg  width="30" height="30"></svg>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Комментарии
+                    <svg  width="30" height="30"></svg>
+                  </td>
+                </tr>
+              </table>
+            </li>
+            <li class="tariffs__item slider__item">
+            </li>
+            <li class="tariffs__item slider__item">
+            </li>
+          </ul>
+          <p class="tariffs__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+      <section class="feedback">
+        <h2 class="visually-hidden">Обратная связь</h2>
+        <p class="feedback__text">
+          Остались вопросы? Свяжитесь с нами!
+        </p>
+        <div class="feedback__contacts-wrapper contacts">
+          <p class="contacts__tel">
+            <b class="contacts__title">Звоните:</b>
+            <a class="contacts__text" href="tel:+78125556666">+7 (812) 555-66-66</a>
+          </p>
+          <p class="contacts__email">
+            <b class="contacts_title">Пишите:</b>
+            <a class="contacts__text" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p class="contacts__address">
+            <b class="contacts__title">Приезжайте в гости:</b>
+            <span class="contacts__text">ул. Большая Конюшенная, 19/8</span>
+          </p>
+        </div>
+      </section>
+      <section class="map">
+        <h2 class="visually-hidden">Положение на карте карте</h2>
+      </section>
     </main>
     <footer class="page-footer">
     </footer>
