--- a/source/photo.html
+++ b/source/photo.html
@@ -178,7 +178,35 @@
               </div>
             </li>
           </ul>
+          <div class="post__slogan">
+            <p class="post__slogan-text">
+              Затмите их всех! Выкладывайте все, что накопилось в телефоне!!!
+            </p>
+          </div>
         </section>
+        <section class="import">
+          <h2 class="visually-hidden">Загрузить свои фото</h2>
+          <form class="import__form" action="https://echo.htmlacademy.ru/">
+            <div class="import__photo">
+              <img src="https://via.placeholder.com/280x370" width="280" height="370" alt="Загруженная фотография">
+            </div>
+            <div class="import__filter">
+              <ul class="import__filter-list">
+                <li class="import__filter-item import__filter-item--active"></li>
+                <li class="import__filter-item import__filter-item--disabled"></li>
+                <li class="import__filter-item import__filter-item--disabled"></li>
+              </ul>
+              <div class="import__range">
+                <div class="import__range-slider"></div>
+              </div>
+            </div>
+            <div class="import__buttons">
+              <button class="import__btn import__btn--post" type="submit">Запостить</button>
+              <button class="import__btn import__btn--cancel" type="reset">Отмена</button>
+            </div>
+          </form>
+        </section>
+
       </section>
     </main>
     <footer  class="page-footer">
